src/components/css/MainDashboard.css
.container{
    margin-top: 20px;
    border-radius: 20px !important;
}
.avatar{

    padding: 10px;
    width:100%;
    height: 230px;
}
.GridItem{
    border-right: 2px solid rgb(197, 197, 197) !important;
}
.textItem{
    color: grey;
    padding: 10px;
    padding-left: 20px;
}
.name{
    padding: 0px;
    margin: 0px;
    color: #00CBF0;
    font-size: 40px;
}
.username{
    padding: 0px;
    margin: 0px;
}
h1{
    padding: 0px;
    margin: 0px;
}
.followers{
    margin: 10px !important;
    font-size: 22px !important;
    background-color: white !important;
    color: #00CBF0 !important;
    border: 2px solid #00CBF0 !important;
}
.followers:hover{
    background-color: #00CBF0 !important;
    color: white !important;
}
.modal-div-following{
    padding: 40px;
    background-color: white;
    position: absolute;
    left: 50%;
    top: 40%;
    -webkit-transform: translate(-50%, -50%);
    transform: translate(-50%, -50%);
}

.follow-submit{
    padding: 11px;
    border-radius: 0px !important;
    font-size: 24px !important;
    background-color: white !important;
    color: #00CBF0 !important;
    border: 2px solid #00CBF0 !important;
}
.follow-submit:hover{
    cursor: pointer;
    background-color: #00CBF0 !important;
    color: white !important;
}

.unfollow-list{
    box-shadow: 0px !important;
}
.unfollow-div{
    width: 100%;
    box-shadow: 1px 1px 2px;
    border-radius: 25px;
}

.unfollow-name{
    padding: 10px;
    font-weight: bold;
    color: grey !important;
}
.unfollow-btn{
    float: right;
    background-color: #00CBF0;
    color: white;
    padding: 10px;
    border: none;
    border-top-right-radius: 25px;
    border-bottom-right-radius: 25px;
}
.unfollow-btn:hover{
    cursor: pointer;
}

